native/src/WDMTMKv2.h

SHARED_LIB void rtlock(TMK_DATA rtDir, TMK_DATA rtSubAddr);
SHARED_LIB void rtunlock();
SHARED_LIB TMK_DATA rtgetcmddata(TMK_DATA rtBusCommand);
SHARED_LIB void rtputcmddata(TMK_DATA rtBusCommand, TMK_DATA rtData);
SHARED_LIB int mtreset();
SHARED_LIB TMK_DATA mtgetsw();
#define mtdefirqmode bcdefirqmode
#define mtgetirqmode bcgetirqmode
#define mtgetmaxbase bcgetmaxbase
#define mtdefbase bcdefbase
#define mtgetbase bcgetbase
#define mtputw bcputw
#define mtgetw bcgetw
#define mtputblk bcputblk
#define mtgetblk bcgetblk
#define mtstartx bcstartx
#define mtstop bcstop
#define mtgetstate bcgetstate
SHARED_LIB TMK_DATA rtenable(TMK_DATA rtEnable);
SHARED_LIB TMK_DATA tmktimer(TMK_DATA tmkTimerCtrl);
SHARED_LIB DWORD tmkgettimer();
SHARED_LIB TMK_DATA tmkgettimerl();