src/TMKLibrary/Core/Interop/NativeMethods.cs


        /// <summary>
        /// Locks subaddress
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void rtlock(uint wSa);

        /// <summary>
        /// Unlocks subaddress
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void rtunlock(uint wSa);

        /// <summary>
        /// Gets command data for subaddress
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void rtgetcmddata(uint wSa, ref ushort pCmd, [Out] ushort[] pData);

        /// <summary>
        /// Puts command data for subaddress
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void rtputcmddata(uint wSa, ushort Cmd, [In] ushort[] pData);

        /// <summary>
        /// Enables/disables subaddresses
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void rtenable(uint wMask);

        #endregion

        #region Monitor Functions

        /// <summary>
        /// Resets and initializes Monitor
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void mtreset();

        /// <summary>
        /// Defines Monitor interrupt mode
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void mtdefirqmode(uint wIrqMode);

        /// <summary>
        /// Gets Monitor interrupt mode
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern uint mtgetirqmode();

        /// <summary>
        /// Gets maximum base address for Monitor
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern int mtgetmaxbase();

        /// <summary>
        /// Defines Monitor base address
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern int mtdefbase(int wBase);

        /// <summary>
        /// Gets Monitor base address
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern int mtgetbase();

        /// <summary>
        /// Writes word to Monitor memory
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void mtputw(int addr, ushort data);

        /// <summary>
        /// Reads word from Monitor memory
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern ushort mtgetw(int addr);

        /// <summary>
        /// Writes block to Monitor memory
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void mtputblk(int addr, [In] ushort[] pBlk, int len);

        /// <summary>
        /// Reads block from Monitor memory
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void mtgetblk(int addr, [Out] ushort[] pBlk, int len);

        /// <summary>
        /// Reads status word from Monitor
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern ushort mtgetsw(int addr);

        /// <summary>
        /// Starts Monitor from given address
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void mtstartx(int addr);

        /// <summary>
        /// Stops Monitor
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void mtstop();

        /// <summary>
        /// Gets Monitor state
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern int mtgetstate();

        #endregion

        #region Timer Functions

        /// <summary>
        /// Timer control
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern void tmktimer(uint wMode);

        /// <summary>
        /// Gets timer value (32-bit)
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern uint tmkgettimer();

        /// <summary>
        /// Gets timer value (64-bit)
        /// </summary>
        [DllImport(DLL_NAME, CallingConvention = CALLING_CONVENTION)]
        internal static extern ulong tmkgettimerl();

        #endregion
    }
